--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Get aab path
       id: aab-path
       run: |
-        path=$(find **/build/outputs/aab -name '*.aab' -type f | head -1)
+        path=$(find **/build/outputs/bundle -name '*.aab' -type f | head -1)
         echo "::set-output name=path::$path"
     - name: Upload aab file
       uses: actions/upload-artifact@v1
@@ -39,6 +39,6 @@ jobs:
       run: |
         curl \
         -H "Authorization: token ${{secrets.DEPLOY_GATE_API_KEY}}" \
-        -F "file=@app/build/outputs/abb/release/app-release.aab" \
+        -F "file=@app/build/outputs/bundle/release/app-release.aab" \
         -F "message=${{github.event.pull_request.title}}" \
         "https://deploygate.com/api/users/${{secrets.DEPLOY_GATE_USER_NAME}}/apps"
