--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,9 +1,9 @@
 name: Android CI
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
+    types:
+      - closed
     branches: [ master ]
 
 jobs:
