--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,7 +7,8 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  if_merged:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
     - name: checkout
@@ -40,5 +41,5 @@ jobs:
         curl \
         -H "Authorization: token ${{secrets.DEPLOY_GATE_API_KEY}}" \
         -F "file=@app/build/outputs/bundle/release/app-release.aab" \
-        -F "message=${{github.event.pull_request.title}}" \
+        -F "message=${{github.event.pull_request.body}}" \
         "https://deploygate.com/api/users/${{secrets.DEPLOY_GATE_USER_NAME}}/apps"
