--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,8 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  if_merged:
-    if: github.event.pull_request.merged == true
+  build:
     runs-on: ubuntu-latest
     steps:
     - name: checkout
