--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,5 +41,5 @@ jobs:
         curl \
         -H "Authorization: token ${{secrets.DEPLOY_GATE_API_KEY}}" \
         -F "file=@app/build/outputs/bundle/release/app-release.aab" \
-        -F "message=${{github.event.pull_request.body}}\n${{github.event.pull_request.body}}" \
+        -F "message=${{github.event.pull_request.title}}\n${{github.event.pull_request.body}}" \
         "https://deploygate.com/api/users/${{secrets.DEPLOY_GATE_USER_NAME}}/apps"
